# light_chat

./: .env  .gitignore  Cargo.toml  Rocket.toml  light_chat.db
migrations/2020-09-23-111247_create_users/: up.sql
migrations/2020-09-23-190912_create_auths/: up.sql
src/: auth.rs  main.rs  models.rs  schema.rs  server.rs  user.rs
src/user/: handlers.rs  storage.rs
