[package]
name = "light_chat"
version = "0.1.0"
authors = ["Sehsyha <valentin.stern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"