[package]
name = "light_chat"
version = "0.1.0"
authors = ["Sehsyha <valentin.stern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.4", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "json"]
